exclude borrowed classes